ready for benchmark

--- a/fft/Makefile
+++ b/fft/Makefile
@@ -1,14 +1,14 @@
-include ../Makefile
+include ../Makefile.shared
 
 test: ./my ./vanilla
-	$(time) ./my
-	$(time) ./vanilla
+	./my
+	./vanilla
 
 my: fft.ml
-	$(mycaml) -o my fft.ml
+	$(mycaml) -o my unix.cmxa fft.ml
 
 vanilla: fft.ml
-	$(vanilla) -o vanilla fft.ml
+	$(vanilla) -o vanilla unix.cmxa fft.ml
 
 clean:
 	rm ./my ./vanilla -f
