--- a/k-means/Makefile
+++ b/k-means/Makefile
@@ -7,10 +7,10 @@ test: vanilla my
 	./my
 
 my: $(SOURCES)
-	$(mycaml) -o $@ unix.cmxa $(SOURCES)
+	$(mycaml) -o $@ -dclambda unix.cmxa $(SOURCES) 2> $@.clam
 
 vanilla: $(SOURCES)
-	$(vanilla) -o $@ unix.cmxa $(SOURCES)
+	$(vanilla) -o $@ -dclambda unix.cmxa $(SOURCES) 2> $@.clam
 
 clean:
 	rm -f *.cm? *.o *.annot my vanilla
