--- a/neural-network/naive-multilayer/Makefile
+++ b/neural-network/naive-multilayer/Makefile
@@ -3,15 +3,14 @@ include ../../Makefile.shared
 SOURCES=dataset.ml neuralNetwork.ml
 
 test: ./my ./vanilla
-	$(time) ./my
-	$(time) ./vanilla
+	./my
+	./vanilla
 
 my: $(SOURCES)
-	$(mycaml) -o $@ -dclambda $(SOURCES) 2> $@.clam
+	$(mycaml) -o $@ -dclambda unix.cmxa $(SOURCES) 2> $@.clam
 
 vanilla: $(SOURCES)
-	$(vanilla) -o $@ -dclambda $(SOURCES) 2> $@.clam
+	$(vanilla) -o $@ -dclambda unix.cmxa $(SOURCES) 2> $@.clam
 
 clean:
-	rm ./my ./vanilla -f
-	rm ./*.cm?
+	rm -f *.cm? *.o my vanilla
