--- a/durand-kerner-aberth/Makefile
+++ b/durand-kerner-aberth/Makefile
@@ -1,15 +1,8 @@
 include ../Makefile.shared
 
-test: ./my ./vanilla
-	./my
-	./vanilla
-
-my: dka.ml
-	$(mycaml) -o $@ -dclambda unix.cmxa dka.ml 2> $@.clam
-
-vanilla: dka.ml
-	$(vanilla) -o $@ unix.cmxa dka.ml 2> $@.clam
+test: dka.ml
+	$(OCAMLOPT) -o $@ $^
 
 clean:
-	rm ./my ./vanilla -f
-	rm ./*.cm?
+	rm -f ./test
+	rm -f ./*.cm?
