--- a/qr-decomposition/Makefile
+++ b/qr-decomposition/Makefile
@@ -1,16 +1,10 @@
 include ../Makefile.shared
 
-SOURCES=qr.ml
+SOURCES= qr.ml
 
-test: my vanilla
-	./my
-	./vanilla
-
-my: $(SOURCES)
-	$(mycaml) -o $@ -dclambda unix.cmxa $(SOURCES) 2> $@.clam
-
-vanilla: $(SOURCES)
-	$(vanilla) -o $@ -dclambda unix.cmxa $(SOURCES) 2> $@.clam
+test: $(SOURCES)
+	$(OCAMLOPT) -o $@ $^
 
 clean:
-	rm -f *.cm? *.o *.annot my vanilla
+	rm -f ./test
+	rm -f ./*.cm?
