--- a/rnd_access/Makefile
+++ b/rnd_access/Makefile
@@ -2,15 +2,9 @@ include ../Makefile.shared
 
 SOURCES= rnd.ml
 
-test: vanilla my
-	./vanilla
-	./my
-
-my: $(SOURCES)
-	$(mycaml) -o $@ -dclambda unix.cmxa $(SOURCES) 2> ./$@.clam
-
-vanilla: $(SOURCES)
-	$(vanilla) -o $@ -dclambda unix.cmxa $(SOURCES) 2> ./$@.clam
+test: $(SOURCES)
+	$(OCAMLOPT) -o $@ $^
 
 clean:
-	rm -f *.cm? *.o *.annot my vanilla
+	rm -f ./test
+	rm -f ./*.cm?
