--- a/k-means/Makefile
+++ b/k-means/Makefile
@@ -1,16 +1,8 @@
 include ../Makefile.shared
 
-SOURCES=dataset.ml kmeans.ml
-
-test: vanilla my
-	./vanilla
-	./my
-
-my: $(SOURCES)
-	$(mycaml) -o $@ -dclambda unix.cmxa $(SOURCES) 2> $@.clam
-
-vanilla: $(SOURCES)
-	$(vanilla) -o $@ -dclambda unix.cmxa $(SOURCES) 2> $@.clam
+test: dataset.ml kmeans.ml
+	$(OCAMLOPT) -o $@ $^
 
 clean:
-	rm -f *.cm? *.o *.annot my vanilla
+	rm -f ./test
+	rm -f ./*.cm?
