--- a/naive-multilayer/Makefile
+++ b/naive-multilayer/Makefile
@@ -2,15 +2,9 @@ include ../Makefile.shared
 
 SOURCES=dataset.ml neuralNetwork.ml
 
-test: ./my ./vanilla
-	./my
-	./vanilla
-
-my: $(SOURCES)
-	$(mycaml) -o $@ -dclambda unix.cmxa $(SOURCES) 2> $@.clam
-
-vanilla: $(SOURCES)
-	$(vanilla) -o $@ -dclambda unix.cmxa $(SOURCES) 2> $@.clam
+test: $(SOURCES)
+	$(OCAMLOPT) -o $@ $^
 
 clean:
-	rm -f *.cm? *.o my vanilla
+	rm -f ./test
+	rm -f ./*.cm?
